[tool.poetry]
name = "deltalake2db"
version = "0.7.3"
description = ""
authors = ["Adrian Ehrsam <adrian.ehrsam@bmsuisse.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
deltalake = ">=0.16.1,<0.19.0,!=0.18.2"
sqlglot = ">=22.2.1"
azure-identity = { version = "^1.16.0", optional = true }

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"
polars = "^1.12.0"
duckdb = "^1.0.0"
ruff = ">=0.4.3"
adlfs = "^2024.4.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest = "^8.1.0"
polars = "^1.12.0"
duckdb = "^1.0.0"
docker = "^7.0.0"
azure-storage-blob = "^12.19.1"
python-dotenv = "^1.0.1"
pandas = ">=1.4.2"
azure-identity = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.9"
typeCheckingMode = "basic"
