[project]
name = "deltalake2db"
version = "0.10.1"
description = ""
authors = [{ name = "Adrian Ehrsam", email = "adrian.ehrsam@bmsuisse.ch" }]
dependencies = ["sqlglot >=22.2.1"]

requires-python = "~=3.9"

[project.optional-dependencies]
deltalake = ["deltalake >=0.16.1,<0.19.0,!=0.18.2"]
azure = ["azure-identity >=1.16.0,<2"]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.uv]
native-tls = true
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "BMSAzureDevOps"
url = "https://VssSessionToken@pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/simple/"
explicit = true
publish-url = "https://pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/upload/"

[dependency-groups]
dev = [
    "pyright >=1.1.352,<2",
    "polars >=1.12.0,<2",
    "duckdb >=1.0.0,<2",
    "ruff >=0.4.3",
    "adlfs >=2024.4.1,<2025",
    "arro3-core>=0.5.1",
]
test = [
    "pytest-cov >=4.1.0,<5",
    "pytest >=8.1.0,<9",
    "polars >=1.12.0,<2",
    "duckdb >=1.0.0,<2",
    "docker >=7.0.0,<8",
    "azure-storage-blob >=12.19.1,<13",
    "python-dotenv >=1.0.1,<2",
    "pandas >=1.4.2",
    "azure-identity >=1.16.0,<2",
    "pyarrow>=20.0.0",
    "pyarrow-stubs>=19.4",
]
